[package]
name = "gramstash"
version = "0.1.0"
edition = "2021"
authors = ["Jie Wang <linsijia628@gmail.com>"]
description = "A Telegram bot to download media from Instagram"
repository = "https://github.com/escwxyz/gramstash"
license = "Apache-2.0"
readme = "README.md"
keywords = ["telegram", "bot", "instagram", "download"]
publish = false

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.83"
chrono = { version = "0.4.39", features = ["serde"] }
log = "0.4.22"
once_cell = "1.20.2"
pretty_env_logger = "0.5.0"
redis = { version = "0.27.6", features = ["tokio-comp", "connection-manager", "tokio-native-tls-comp"] }
reqwest = { version = "0.11.27", features = ["json", "socks", "cookies"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
sha2 = "0.10"
shuttle-runtime = "0.49.0"
teloxide = { version = "0.13.0", features = ["macros", "throttle"] }
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full"] }
url = "2.5.2"

# [dev-dependencies]
# teloxide_tests = "0.2.0"