[package]
name = "gramstash"
version = "0.1.0"
edition = "2021"
authors = ["Jie Wang <linsijia628@gmail.com>"]
description = "A Telegram bot to download media from Instagram"
repository = "https://github.com/escwxyz/gramstash"
license = "Apache-2.0"
readme = "README.md"
keywords = ["telegram", "bot", "instagram", "download"]
publish = false

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.83"
axum = "0.8.1"
chrono = { version = "0.4.39", features = ["serde"] }
crypto-pay-api = "0.1.0"
dashmap = "6.1.0"
libsql = "0.6.0"
log = "0.4.25"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
redis = { version = "0.29", default-features = false, features = ["tokio-comp", "connection-manager", "tokio-native-tls-comp", "tls", "tls-native-tls"] }
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json", "socks", "cookies"] }
rust-i18n = "3.1.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
sha2 = "0.10"
shuttle-runtime = "0.51.0"
shuttle-turso = "0.51.0"
teloxide = { git = "https://github.com/teloxide/teloxide.git", features = ["macros", "redis-storage", "throttle"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
url = "2.5.2"
uuid = "1.12.0"

[dev-dependencies]
teloxide_tests = "0.2.0"
